--- a/app/src/main/res/layout/activity_email_pass_reg.xml
+++ b/app/src/main/res/layout/activity_email_pass_reg.xml
@@ -37,20 +37,32 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="25dp"
-                    android:text="EmailPassReg"
+                    android:text="@string/user_registration"
                     android:textAlignment="center"
                     android:textAllCaps="true"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/editTextEmail"
+                    android:id="@+id/editTextLogin"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
                     android:drawablePadding="7dp"
                     android:drawableStart="@drawable/ic_perm_identity_black_36dp"
+                    android:ems="10"
+                    android:hint="@string/login"
+                    android:inputType="textPersonName"
+                    android:textSize="14sp" />
+
+                <EditText
+                    android:id="@+id/editTextEmail"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:drawablePadding="7dp"
+                    android:drawableStart="@drawable/ic_mail_black_24dp"
                     android:ems="10"
                     android:hint="@string/email"
                     android:inputType="textEmailAddress"
@@ -66,53 +78,40 @@
                     android:ems="10"
                     android:hint="@string/password"
                     android:inputType="textPassword"
+                    android:layout_marginTop="10dp"
+                    android:textSize="14sp" />
+
+                <EditText
+                    android:id="@+id/editTextPasswordRepeat"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:drawablePadding="7dp"
+                    android:drawableStart="@drawable/ic_lock_outline_black_36dp"
+                    android:ems="10"
+                    android:hint="Repeat password"
+                    android:inputType="textPassword"
                     android:textSize="14sp" />
 
                 <Button
-                    android:id="@+id/buttonSignin"
+                    android:id="@+id/buttonRegister"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
-                    android:text="@string/signin" />
+                    android:onClick="registerUser"
+                    android:text="@string/signup" />
 
                 <TextView
                     android:id="@+id/textViewSignup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
-                    android:text="@string/not_have_an_account_signup_here"
+                    android:text="@string/already_registered_signin_here"
+                    android:onClick="OpenMainActivity"
                     android:textAlignment="center" />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:orientation="horizontal"
-                    android:paddingBottom="20dp"
-                    android:paddingTop="10dp">
 
-                    <Button
-                        android:id="@+id/buttonGoogle"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/google_login_logo" />
-
-                    <Button
-                        android:id="@+id/buttonFacebook"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:background="@drawable/facebook_login_logo" />
-
-                    <Button
-                        android:id="@+id/buttonTwitter"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/twitter_login_logo" />
-
-                </LinearLayout>
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
