--- a/app/src/main/res/layout/app_bar_menu_main.xml
+++ b/app/src/main/res/layout/app_bar_menu_main.xml
@@ -13,9 +13,10 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
+            android:theme="@style/ThemeOverlay.AppCompat"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
