--- a/app/src/main/res/layout/content_menu_main.xml
+++ b/app/src/main/res/layout/content_menu_main.xml
@@ -8,14 +8,65 @@
     tools:context="com.pelicanus.insight.MenuMainActivity"
     tools:showIn="@layout/app_bar_menu_main">
 
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="50dp">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:layout_margin="5dp"
+                android:background="@color/colorPrimary"
+                android:text="Add"
+                android:textColor="@color/white"
+                android:drawableTop = "@drawable/main_menu_excursions_search"
+                android:drawablePadding="10dp"
+                android:layout_gravity="end"
+                />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="5dp"
+                android:background="@color/colorPrimaryDark"
+                android:text="Tag"
+                android:textColor="@color/white"
+                android:drawableTop = "@drawable/main_menu_excursions_search"
+                android:drawablePadding="10dp"
+                android:layout_gravity="end"
+                />
+
+        </LinearLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@color/colorAccent"
+            android:text="Explore"
+            android:textColor="@color/white"
+            android:drawableTop="@drawable/main_menu_excursions_search"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="HELLO WORLD BLAHBLAHBLAH"/>
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"
+            android:text="Check out the most popular excursions"
+            android:textSize="16dp"/>
 
     </LinearLayout>
 
