--- a/app/src/main/res/layout/activity_create_trip.xml
+++ b/app/src/main/res/layout/activity_create_trip.xml
@@ -62,7 +62,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/trip_create_ET_description"
-        android:inputType="textPersonName"
+        android:inputType="textMultiLine"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/address_field" />
 
